Correction syntaxe YAML chatbot-service et ajout fichier exemple

--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,10 @@ build/
 .env.local
 *.env
 
+# Secrets and API Keys (ne pas commiter les clés API)
+**/application-local.yml
+**/application-prod.yml
+
 # Docker
 *.pid
 *.seed
